--- a/code/Retrofit/02-GuiAsync/app/src/main/res/layout/activity_main.xml
+++ b/code/Retrofit/02-GuiAsync/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
+    android:id="@+id/root"
     tools:context=".MainActivity">
+
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="departement-info-cem"
         android:id="@+id/et"
         />
 
