--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -39,7 +39,9 @@
   text-align: center;
   width: 100%;
   display: block;
-  background: #8787ff;
+/*  background: #8787ff;*/
+  background: blue;
+  color: white;
   font-size: 0.75em;
 }
 
@@ -48,7 +50,9 @@
   text-align: center;
   width: 100%;
   display: block;
-  background: #8787ff;
+/*  background: #8787ff;*/
+  background: blue;
+  color: white;
   font-size: 0.75em;
 }
 
@@ -57,7 +61,9 @@
   text-align: center;
   width: 100%;
   display: block;
-  background: #8787ff;
+/*  background: #8787ff;*/
+  background: blue;
+  color: white;
   font-size: 0.75em;
 }
 
@@ -66,6 +72,8 @@
   text-align: center;
   width: 100%;
   display: block;
-  background: #8787ff;
+/*  background: #8787ff;*/
+  background: blue;
+  color: white;
   font-size: 0.75em;
 }
