--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -77,3 +77,13 @@
   color: white;
   font-size: 0.75em;
 }
+
+.mobile-only {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .mobile-only {
+    display: block;
+  }
+}
